modificación de título

--- a/Desafío entregable 1/simuladorInteractivo.html
+++ b/Desafío entregable 1/simuladorInteractivo.html
@@ -12,7 +12,7 @@
     <!--formulario-->
     <section>
         <div>
-            <h1 class="titulo">Cotización para alquiler de salón de eventos</h1>
+            <h1 class="titulo">Formulario de Cotización para alquiler de salón</h1>
         </div>
         <!--comienzo del formulario-->
         <form id="formulario">
