--- a/Primera entrega del proyecto final/reserva.html
+++ b/Primera entrega del proyecto final/reserva.html
@@ -14,7 +14,7 @@
     <section class="formulario__tres grid">
         <!--comienzo del formulario de reserva-->
         <form id="formulario__reservar" class="formulario__reservar grid">
-            <h1 class="titulo_reservar">Formulario de Reserva</h1>
+            <h1 class="titulo_reservar">Formulario de pago de Reserva</h1>
             <!-- Datos personales -->
             <h2 class="texto_reservar_uno">Información de Contacto</h2>
             <!-- Nombre y Apellido -->
