se realizan cambios en mensajes de alertas

--- a/Primera entrega del proyecto final/index.html
+++ b/Primera entrega del proyecto final/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador Interactivo</title>
+    <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+    <!--Sweet Alert-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="formulario__uno grid">
-        <!--comienzo del formulario de contacto-->
+        <!--Comienzo del formulario de contacto-->
         <form id="formulario__contactanos" class="formulario__contactanos grid">
             <div class="contactanos">
                 <h1 class="titulo_contactanos">Formulario de contacto</h1>
@@ -75,16 +79,6 @@
                     <div class="formulario__grupo formulario__grupo-btn-enviar">
                         <button type="submit" class="formulario__btn">Enviar</button>
                     </div>
-                </div>
-                <!-- Mensaje de Exito -->
-                <div>
-                    <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">El formulario se envió
-                        correctamente!</p>
-                </div>
-                <!-- Mensaje de Error -->
-                <div class="formulario__mensaje" id="formulario__mensaje">
-                    <p><i class="fas fa-exclamation-triangle"></i><b> Error: </b> Debe completar el formulario
-                        correctamente!</p>
                 </div>
         </form>
         <!--Fin de formulario de contacto-->
@@ -160,6 +154,7 @@
         <!--Fin del formulario de cotización-->
         </div>
     </section>
+    <!--Js.-->
     <script src="./index.js"></script>
 </body>
 
