--- a/Primera entrega del proyecto final/reserva.html
+++ b/Primera entrega del proyecto final/reserva.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+    <!--Sweet Alert-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--CSS-->
     <link rel="stylesheet" href="reserva.css">
 </head>
 
 <body>
     <section class="formulario__tres grid">
-        <!--comienzo del formulario de reserva-->
+        <!--Comienzo del formulario de reserva-->
         <form id="formulario__reservar" class="formulario__reservar grid">
             <h1 class="titulo_reservar">Formulario de pago de Reserva</h1>
             <!-- Datos personales -->
@@ -124,19 +128,10 @@
                     <button type="submit" class="formulario__btn__dos">Confirmar Reserva</button>
                 </div>
             </div>
-            <!-- Mensaje de Exito -->
-            <div>
-                <p class="formulario__mensaje-exito__dos" id="formulario__mensaje-exito__dos">El formulario se envió
-                    correctamente!</p>
-            </div>
-            <!-- Mensaje de Error -->
-            <div class="formulario__mensaje__dos" id="formulario__mensaje__dos">
-                <p><i class="fas fa-exclamation-triangle"></i><b> Error: </b> Debe completar el formulario
-                    correctamente!</p>
-            </div>
         </form>
         <!--Fin de formulario de contacto-->
     </section>
+    <!--Js.-->
     <script src="./reserva.js"></script>
 </body>
 
